Section 8 is ready

--- a/app/index.html
+++ b/app/index.html
@@ -95,13 +95,13 @@
                                 </label>
                                 <label>
                                     <span class="phone"><input type="text" name="phone" placeholder="Номер телефона"
-                                       required></span>
-                                   </label>
-                                   <label>
-                                    <span class="message"><input type="text" name="message" placeholder="Сообщение"
                                      required></span>
                                  </label>
-                                 <div class="button-wrap">
+                                 <label>
+                                    <span class="message"><input type="text" name="message" placeholder="Сообщение"
+                                       required></span>
+                                   </label>
+                                   <div class="button-wrap">
                                     <button class="button">Хочу на экскурсию</button>
                                 </div>
 
@@ -351,17 +351,17 @@
                             <div class="col-md-4">
                                 <label>
                                     <span class="phone"><input type="text" name="phone" placeholder="Номер телефона"
-                                       required></span>
-                                   </label>
-                               </div>
-                               <div class="col-md-4">
-                                   <label>
-                                    <span class="message"><input type="text" name="message" placeholder="Сообщение"
                                      required></span>
                                  </label>
                              </div>
-                         </div>
-                         <div class="col-md-4"><div class="sendmes">Отправляя заявку я даю
+                             <div class="col-md-4">
+                                 <label>
+                                    <span class="message"><input type="text" name="message" placeholder="Сообщение"
+                                       required></span>
+                                   </label>
+                               </div>
+                           </div>
+                           <div class="col-md-4"><div class="sendmes">Отправляя заявку я даю
                             <span>согласие на обработку персональных данных</span></div></div>
                             <div class="col-md-4">
                                 <div class="button-wrap">
@@ -435,26 +435,75 @@
               <div class="container">
                   <div class="vegan-wrap">
                       <div class="vegan-left">
-                         <div class="shadow">Акция</div>
-                          <p>Авторский тур «мастер-класс</p>
-                          <p>по вегетарианской мекке»</p>
-                          <p>со скидкой!</p>
-                          <span>С начала акции:</span>
-                          <div class="timer">
-                              <div class="clock"></div>
-                          </div>
-                          <a href="#" class="button">Хочу получить скидку!</a>
+                       <div class="shadow">Акция</div>
+                       <p>Авторский тур «мастер-класс</p>
+                       <p>по вегетарианской мекке»</p>
+                       <p>со скидкой!</p>
+                       <span>С начала акции:</span>
+                       <div class="timer">
+                          <div class="clock"></div>
                       </div>
-                      <div class="vegan-right">
-                          <img src="img/pilaf.png" alt="Alt">
-                      </div>
+                      <a href="#" class="button">Хочу получить скидку!</a>
+                  </div>
+                  <div class="vegan-right">
+                      <img src="img/pilaf.png" alt="Alt">
                   </div>
               </div>
-          </section>
+          </div>
+      </section>
+
+      <section class="sect-8">
+          <div class="container">
+              <div class="h2"><h2>Отзывы</h2></div>
+              <div class="slider2">
+
+                <div class="slide2">
+                    <div class="item">
+                        <img src="img/guide_1.jpg" alt="Alt">
+                        <strong>Мария Иванова</strong>
+                        <span>г.Москва</span>
+                        <div class="texy">
+                            <p>Это то, что должно случится с каждым хотя бы раз в жизни! Индия была детской мечтой - яркой, сказочной и очень далёкой. И вот спустя пару десятков лет это мечта превратилась в два года моей жизни среди цветастых сари, ароматов специй и звуков мантр в соседних храмах.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide2">
+                    <div class="item">
+                        <img src="img/guide_2.jpg" alt="Alt">
+                        <strong>Мария Иванова</strong>
+                        <span>г.Москва</span>
+                        <div class="texy">
+                            <p>Это то, что должно случится с каждым хотя бы раз в жизни! Индия была детской мечтой - яркой, сказочной и очень далёкой. И вот спустя пару десятков лет это мечта превратилась в два года моей жизни среди цветастых сари, ароматов специй и звуков мантр в соседних храмах.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide2">
+                    <div class="item">
+                        <img src="img/guide_3.jpg" alt="Alt">
+                        <strong>Мария Иванова</strong>
+                        <span>г.Москва</span>
+                        <div class="texy">
+                            <p>Это то, что должно случится с каждым хотя бы раз в жизни! Индия была детской мечтой - яркой, сказочной и очень далёкой. И вот спустя пару десятков лет это мечта превратилась в два года моей жизни среди цветастых сари, ароматов специй и звуков мантр в соседних храмах.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <section class="sect-9">
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+        </section>
 
 
 
-          <script src="js/scripts.min.js"></script>
+        <script src="js/scripts.min.js"></script>
 
-      </body>
-      </html>
+    </body>
+    </html>
