--- a/app/index.html
+++ b/app/index.html
@@ -493,12 +493,75 @@
         </section>
 
         <section class="sect-9">
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7">
+                        <div class="tex">
+                            <p>Организация свадебных церемоний в Индийском и Европейском стилях. Профессиональные фотосессии.</p>
+                            <span>Это то, что должно случится с каждым хотя бы раз в жизни! Индия была детской мечтой - яркой, сказочной и очень далёкой.</span>
+                        </div>
+                        <a href="#" class="button">Узнать подробнее</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="sect-10">
+            <div class="container">
+                <div class="h2">
+                    <h2>Фото и видео с наших экскурсий</h2>
+                </div>
+                <div class="tabs-wrap">
+                    <div class="tabs">
+                        <span class="tab button">Фото</span>
+                        <span class="tab button">Видео</span>
+                    </div>
+                    <div class="tab-content">
+                        <div class="tab_item">
+                            <div class="row">
+                                <div class="col-lg-4 col-md-6 col-sm-6">
+                                    <div class="e-item">   
+                                        <a href="img/exc_1.jpg" alt="Alt" class="fancybox"><img src="img/exc_1.jpg" alt="Alt"></a>
+                                    </div>  
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-6">
+                                    <div class="e-item">   
+                                          <a href="img/exc_2.jpg" alt="Alt" class="fancybox"><img src="img/exc_2.jpg" alt="Alt"></a>
+                                    </div>  
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-6">
+                                    <div class="e-item">   
+                                          <a href="img/exc_3.jpg" alt="Alt" class="fancybox"><img src="img/exc_3.jpg" alt="Alt"></a>
+                                    </div>  
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-6">
+                                    <div class="e-item">   
+                                          <a href="img/exc_4.jpg" alt="Alt" class="fancybox"><img src="img/exc_4.jpg" alt="Alt"></a>
+                                    </div>  
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-6">
+                                    <div class="e-item">   
+                                          <a href="img/exc_5.jpg" alt="Alt" class="fancybox"><img src="img/exc_5.jpg" alt="Alt"></a>
+                                    </div>  
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-6">
+                                    <div class="e-item">   
+                                         <a href="img/exc_1.jpg" alt="Alt" class="fancybox"><img src="img/exc_6.jpg" alt="Alt"></a>
+                                    </div>  
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab_item">
+
+                            <div class="e-item">
+                                <a href="https://www.youtube.com/watch?v=tIb8EFopAfk" alt="Alt" class="fancybox"><img src="img/exc_6.jpg" alt="Alt"></a>
+                            </div>  
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </section>
 
 
