Footer is ready

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Test3</title>
+    <title>India</title>
     <meta name="description" content="">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -95,14 +95,14 @@
                                 </label>
                                 <label>
                                     <span class="phone"><input type="text" name="phone" placeholder="Номер телефона"
-                                     required></span>
-                                 </label>
-                                 <label>
-                                    <span class="message"><input type="text" name="message" placeholder="Сообщение"
                                        required></span>
                                    </label>
-                                   <div class="button-wrap">
-                                    <button class="button">Хочу на экскурсию</button>
+                                   <label>
+                                    <span class="message"><input type="text" name="message" placeholder="Сообщение"
+                                     required></span>
+                                 </label>
+                                 <div class="button-wrap">
+                                    <button class="button" data-form="Верхняя форма">Хочу на экскурсию</button>
                                 </div>
 
                                 <input type="hidden" name="formname" value="Зявка с верхей формы">
@@ -127,7 +127,7 @@
                                 <div class="sect-2__wrap__head">
                                     <div class="shadow">Пройти опрос</div>
                                     <div class="quest">Пройди опрос и получи скидку до 25%<br/> на экскурсии на твой выбор</div>
-                                    <a href="#" class="button btn">Пройти опрос</a>
+                                    <a href="#callback" class="popup-with-zoom-anim button btn">Пройти опрос</a>
                                 </div>
 
                             </div>
@@ -148,7 +148,7 @@
                                         <h4>Райские северные пляжи</h4>
                                         <p>Северные пляжи — экскурсия для тех, кто хочет расслабиться, насладиться красивыми видами,
                                         теплым морем и ласковым солнцем и почувствовать атмосферу гоанского рая!</p>
-                                        <a href="#" class="button button-empty">Узнать подробнее</a>
+                                        <a href="#callback" class="popup-with-zoom-anim button button-empty">Узнать подробнее</a>
                                     </div>
                                 </div>
 
@@ -162,7 +162,7 @@
                                         <h4>Райские северные пляжи</h4>
                                         <p>Северные пляжи — экскурсия для тех, кто хочет расслабиться, насладиться красивыми видами,
                                         теплым морем и ласковым солнцем и почувствовать атмосферу гоанского рая!</p>
-                                        <a href="#" class="button button-empty">Узнать подробнее</a>
+                                        <a href="#callback" class="popup-with-zoom-anim button button-empty">Узнать подробнее</a>
                                     </div>
                                 </div>
 
@@ -176,7 +176,7 @@
                                         <h4>Райские северные пляжи</h4>
                                         <p>Северные пляжи — экскурсия для тех, кто хочет расслабиться, насладиться красивыми видами,
                                         теплым морем и ласковым солнцем и почувствовать атмосферу гоанского рая!</p>
-                                        <a href="#" class="button button-empty">Узнать подробнее</a>
+                                        <a href="#callback" class="popup-with-zoom-anim button button-empty">Узнать подробнее</a>
                                     </div>
                                 </div>
 
@@ -190,7 +190,7 @@
                                         <h4>Райские северные пляжи</h4>
                                         <p>Северные пляжи — экскурсия для тех, кто хочет расслабиться, насладиться красивыми видами,
                                         теплым морем и ласковым солнцем и почувствовать атмосферу гоанского рая!</p>
-                                        <a href="#" class="button button-empty">Узнать подробнее</a>
+                                        <a href="#callback" class="popup-with-zoom-anim button button-empty">Узнать подробнее</a>
                                     </div>
                                 </div>
 
@@ -204,7 +204,7 @@
                                         <h4>Райские северные пляжи</h4>
                                         <p>Северные пляжи — экскурсия для тех, кто хочет расслабиться, насладиться красивыми видами,
                                         теплым морем и ласковым солнцем и почувствовать атмосферу гоанского рая!</p>
-                                        <a href="#" class="button button-empty">Узнать подробнее</a>
+                                        <a href="#callback" class="popup-with-zoom-anim button button-empty">Узнать подробнее</a>
                                     </div>
                                 </div>
 
@@ -218,13 +218,13 @@
                                         <h4>Райские северные пляжи</h4>
                                         <p>Северные пляжи — экскурсия для тех, кто хочет расслабиться, насладиться красивыми видами,
                                         теплым морем и ласковым солнцем и почувствовать атмосферу гоанского рая!</p>
-                                        <a href="#" class="button button-empty">Узнать подробнее</a>
+                                        <a href="#callback" class="popup-with-zoom-anim button button-empty">Узнать подробнее</a>
                                     </div>
                                 </div>
 
                             </div>
 
-                            <a href="#" class="button button-blue btn">Посмотреть все предложения</a>
+                            <a href="#callback" class="popup-with-zoom-anim button button-blue btn">Посмотреть все предложения</a>
 
                         </div>
                     </div>
@@ -238,7 +238,7 @@
                     <div class="row">
                         <div class="col-md-7">
                             <div class="tex"><p>Любая экскурсия может стать для вас индивидуальной! От 100$ с человека</p></div>
-                            <a href="#" class="button">Хочу на экскурсию!</a>
+                            <a href="#callback" class="popup-with-zoom-anim button"  data-form="Средняя форма">Хочу на экскурсию!</a>
                         </div>
                     </div>
                 </div>
@@ -351,17 +351,17 @@
                             <div class="col-md-4">
                                 <label>
                                     <span class="phone"><input type="text" name="phone" placeholder="Номер телефона"
-                                     required></span>
-                                 </label>
-                             </div>
-                             <div class="col-md-4">
-                                 <label>
-                                    <span class="message"><input type="text" name="message" placeholder="Сообщение"
                                        required></span>
                                    </label>
                                </div>
-                           </div>
-                           <div class="col-md-4"><div class="sendmes">Отправляя заявку я даю
+                               <div class="col-md-4">
+                                   <label>
+                                    <span class="message"><input type="text" name="message" placeholder="Сообщение"
+                                     required></span>
+                                 </label>
+                             </div>
+                         </div>
+                         <div class="col-md-4"><div class="sendmes">Отправляя заявку я даю
                             <span>согласие на обработку персональных данных</span></div></div>
                             <div class="col-md-4">
                                 <div class="button-wrap">
@@ -435,15 +435,15 @@
               <div class="container">
                   <div class="vegan-wrap">
                       <div class="vegan-left">
-                       <div class="shadow">Акция</div>
-                       <p>Авторский тур «мастер-класс</p>
-                       <p>по вегетарианской мекке»</p>
-                       <p>со скидкой!</p>
-                       <span>С начала акции:</span>
-                       <div class="timer">
+                         <div class="shadow">Акция</div>
+                         <p>Авторский тур «мастер-класс</p>
+                         <p>по вегетарианской мекке»</p>
+                         <p>со скидкой!</p>
+                         <span>С начала акции:</span>
+                         <div class="timer">
                           <div class="clock"></div>
                       </div>
-                      <a href="#" class="button">Хочу получить скидку!</a>
+                      <a href="#callback" class="popup-with-zoom-anim button">Хочу получить скидку!</a>
                   </div>
                   <div class="vegan-right">
                       <img src="img/pilaf.png" alt="Alt">
@@ -500,7 +500,7 @@
                             <p>Организация свадебных церемоний в Индийском и Европейском стилях. Профессиональные фотосессии.</p>
                             <span>Это то, что должно случится с каждым хотя бы раз в жизни! Индия была детской мечтой - яркой, сказочной и очень далёкой.</span>
                         </div>
-                        <a href="#" class="button">Узнать подробнее</a>
+                        <a href="#callback" class="popup-with-zoom-anim button">Узнать подробнее</a>
                     </div>
                 </div>
             </div>
@@ -526,47 +526,147 @@
                                 </div>
                                 <div class="col-lg-4 col-md-6 col-sm-6">
                                     <div class="e-item">   
-                                          <a href="img/exc_2.jpg" alt="Alt" class="fancybox"><img src="img/exc_2.jpg" alt="Alt"></a>
-                                    </div>  
-                                </div>
-                                <div class="col-lg-4 col-md-6 col-sm-6">
-                                    <div class="e-item">   
-                                          <a href="img/exc_3.jpg" alt="Alt" class="fancybox"><img src="img/exc_3.jpg" alt="Alt"></a>
-                                    </div>  
-                                </div>
-                                <div class="col-lg-4 col-md-6 col-sm-6">
-                                    <div class="e-item">   
-                                          <a href="img/exc_4.jpg" alt="Alt" class="fancybox"><img src="img/exc_4.jpg" alt="Alt"></a>
-                                    </div>  
-                                </div>
-                                <div class="col-lg-4 col-md-6 col-sm-6">
-                                    <div class="e-item">   
-                                          <a href="img/exc_5.jpg" alt="Alt" class="fancybox"><img src="img/exc_5.jpg" alt="Alt"></a>
-                                    </div>  
-                                </div>
-                                <div class="col-lg-4 col-md-6 col-sm-6">
-                                    <div class="e-item">   
-                                         <a href="img/exc_1.jpg" alt="Alt" class="fancybox"><img src="img/exc_6.jpg" alt="Alt"></a>
-                                    </div>  
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tab_item">
+                                      <a href="img/exc_2.jpg" alt="Alt" class="fancybox"><img src="img/exc_2.jpg" alt="Alt"></a>
+                                  </div>  
+                              </div>
+                              <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="e-item">   
+                                  <a href="img/exc_3.jpg" alt="Alt" class="fancybox"><img src="img/exc_3.jpg" alt="Alt"></a>
+                              </div>  
+                          </div>
+                          <div class="col-lg-4 col-md-6 col-sm-6">
+                            <div class="e-item">   
+                              <a href="img/exc_4.jpg" alt="Alt" class="fancybox"><img src="img/exc_4.jpg" alt="Alt"></a>
+                          </div>  
+                      </div>
+                      <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="e-item">   
+                          <a href="img/exc_5.jpg" alt="Alt" class="fancybox"><img src="img/exc_5.jpg" alt="Alt"></a>
+                      </div>  
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="e-item">   
+                       <a href="img/exc_1.jpg" alt="Alt" class="fancybox"><img src="img/exc_6.jpg" alt="Alt"></a>
+                   </div>  
+               </div>
+           </div>
+       </div>
+       <div class="tab_item">
 
-                            <div class="e-item">
-                                <a href="https://www.youtube.com/watch?v=tIb8EFopAfk" alt="Alt" class="fancybox"><img src="img/exc_6.jpg" alt="Alt"></a>
-                            </div>  
+        <div class="e-item">
+            <a href="https://www.youtube.com/watch?v=tIb8EFopAfk" alt="Alt" class="fancybox"><img src="img/exc_6.jpg" alt="Alt"></a>
+        </div>  
 
-                        </div>
+    </div>
+</div>
+
+</div>
+</div>
+</section>
+
+<footer>
+    <div class="foot">
+
+     <div class="container">
+      <div class="bus-form">
+          <form class="forms">
+            <p>Не знаете какую экскурсию выбрать, оставьте заявку и получите<br/> <b>индивидуальный подбор бесплатно</b></p>
+            <div class="row">
+                <div class="col-md-4">
+                    <label>
+                        <span class="name"><input type="text" name="name" placeholder="Ваше имя" required></span>
+                    </label>
+                </div>
+                <div class="col-md-4">
+                    <label>
+                        <span class="phone"><input type="text" name="phone" placeholder="Номер телефона"
+                           required></span>
+                       </label>
+                   </div>
+                   <div class="col-md-4">
+                       <label>
+                        <span class="message"><input type="text" name="message" placeholder="Сообщение"
+                         required></span>
+                     </label>
+                 </div>
+             </div>
+             <div class="col-md-4"><div class="sendmes">Отправляя заявку я даю
+                <span>согласие на обработку персональных данных</span></div></div>
+                <div class="col-md-4">
+                    <div class="button-wrap">
+                        <button class="button" date-form="Нижняя форма">Хочу на экскурсию</button>
+                    </div> 
+                </div>
+
+
+                <input type="hidden" name="formname" value="Зявка с верхей формы">
+
+            </form>
+        </div>
+
+        <div class="footer-text">
+            <div class="h2"><h2>Остались вопросы?</h2></div>
+            <p>Звоните или оставляйте заявку на обратный звонок</p>
+            <p>Мы вам перезвоним через 15 минут</p>
+            <a href="#callback" class="popup-with-zoom-anim button">Оставить заявку</a>
+        </div>
+
+        <div class="footer-copy">
+            <div class="row">
+                <div class="col-lg-2">
+                    <div class="f-logo">
+                        <img src="img/logo-footer.png" alt="Footer Logo">
                     </div>
-
+                </div>
+                <div class="col-lg-4">
+                 <span>© Экскурсии в индию 2018</span>
+             </div>
+             <div class="col-lg-6">
+                <div class="social">
+                    <span>Дружите с нами в социальных сетях</span>
+                    <a href="#"><img src="img/soc1.png" alt="Alt"></a>
+                    <a href="#"><img src="img/soc2.png" alt="Alt"></a>
                 </div>
             </div>
-        </section>
+        </div>
+
+    </div>
 
 
+</div>
 
-        <script src="js/scripts.min.js"></script>
+</div>
 
-    </body>
-    </html>
+</footer>
+
+<div class="hidden">
+   <form class="popup-form callback zoom-anim-dialog" id="callback">
+
+    <div class="success">Спасибо за заявку! <br/>
+    Наши менеджеры свяжутся с вами в ближайшее время.</div>
+
+    <!-- Hidden Required Fields -->
+    <input type="hidden" name="project_name" value="Site Name">
+    <input type="hidden" name="admin_email" value="yakov_dux@bk.ru">
+    <input type="hidden" name="form_subject" value="Новая заявка с сайта Юрдис">
+    <h3>Заказать звонок</h3>
+    <label>
+       <span>Ваше имя:</span>
+       <input type="text" name="Имя" placeholder="Введите ваше имя...">
+   </label>
+   <label>
+       <span>Ваш телефон:</span>
+       <input type="text" name="Телефон" placeholder="Введите ваш телефон..." required>
+   </label>
+   <div class="text-center">
+    <button class="button" date-form="С кнопки форма"">Отправить</button>
+   </div>
+   <input class="formname" type="hidden" name="">
+</form>
+</div>
+
+
+<script src="js/scripts.min.js"></script>
+
+</body>
+</html>
